2004-10-27  Levi Bard <taktaktaktaktaktaktaktaktaktak@gmail.com>

	* Services/ParserService/DefaultParserService.cs: comment out code
	to select the VB parser, because we dont actually have one yet.

2004-10-22  Chris Toshok  <toshok@ximian.com>

	* Gui/Workbench/Layouts/SdiWorkspaceLayout.cs: add
	DebuggerThreadPad.

2004-10-22  Chris Toshok  <toshok@ximian.com>

	* Gui/Workbench/Layouts/SdiWorkspaceLayout.cs: add
	MonoDevelop.SourceEditor.Gui.DebuggerStackTracePad to the
	debugPads.

2004-10-21  Chris Toshok  <toshok@ximian.com>

	* Gui/Workbench/DefaultWorkbench.cs: don't try to open
	cur_dbgFilename if it's String.Empty.

2004-10-20  John Luke  <john.luke@gmail.com>

	* Commands/MenuItemBuilders.cs:
	* Commands/FileCommands.cs:
	* Commands/AutostartCommands.cs:
	* Services/File/RecentOpen.cs:
	* Services/File/DefaultFileService.cs:
	* Services/Project/DefaultProjectService.cs: enable new Recent Files stuff,
	and small adjustments for it.

2004-10-20  John Luke  <john.luke@gmail.com>

	* Services/File/RecentFiles.cs: fix a bunch of bugs

2004-10-20  John Luke  <john.luke@gmail.com>

	* Makefile.am: remove RingBuffer, add RecentFiles (not used yet)
	* Services/File/FdoRecentFiles.cs
	* Services/File/RecentItem.cs
	* Services/File/RingBuffer.cs: remove old unused stuff
	* Services/File/RecentFiles.cs: new in-progress implementation

2004-10-15  Todd Berman  <tberman@off.net>

	* Internal/Project/Combine/CombineEntry.cs: Before running, copy
	all dependant output assemblies to the proper place.

2004-10-12  Gert Driesen  <drieseng@users.sourceforge.net>

	* Internal/Parser/SharpAssemblyLayer/SharpAssemblyClass.cs:
	use alias to workaround mcs change

2004-10-07  Todd Berman  <tberman@off.net>

	* Internal/Project/Project/AbstractProject.cs: Make sure to copy the
	.mdb file if it exists when pushing the new dll into the AppBase of
	the executing assembly. This gives debug info for supporting dlls
	under 1.1.x and HEAD when you click 'Run'.
