@@ -16,6 +16,8 @@ using MonoDevelop.SharpAssembly.Metadata;
 using MonoDevelop.SharpAssembly.PE;
 using MonoDevelop.SharpAssembly.Assembly;
 
+using SharpAssembly = MonoDevelop.SharpAssembly.Assembly.SharpAssembly;
+
 namespace MonoDevelop.Internal.Parser {
 	
 	[Serializable]
